--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
